Add 'DayList' component

--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.3",
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dayjs": "^1.11.3",
     "framer-motion": "^6",
     "jotai": "^1.7.4",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
